# franka_drake

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  JOURNAL.md  Makefile  README.md  README_tmp.html  build.sh  client.cpp  cmake_install.cmake  debug_server  dual_torque.cpp  fer_drake.urdf  fer_drake_fingerless.urdf  fer_drake_simple.urdf  main.cpp  main_network.cpp  run_server.sh  two_bar_linkage.urdf
.github/workflows/: franka_drake.yml
apps/: CMakeLists.txt  README.md  franka_fci_sim_embed_example.cpp  franka_fci_sim_server_main.cpp  franka_fci_sim_warehouse_example.cpp  warehouse_drake_controller.cpp
docs/: libfranka_examples.md  real_time_factor_monitoring.md
examples/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  drake_simple_example  drake_simple_example.cpp  franka_fci_sim_embed_example.cpp  franka_fci_sim_embed_example_no_gripper.cpp  franka_fci_sim_server_main  franka_fci_sim_server_main.cpp  move_cube.cc  pick_and_place_drake_controller.cpp  run_simulator_server  run_simulator_server.cpp  sim_sandbox  test_robot_movement  test_robot_movement.cpp  two_bar_linkage.cpp  warehouse_drake_controller.cpp
include/: zero_last_joint.h
include/franka_drake/: fci_sim_embed.h  fci_sim_server.h  franka_drake_module.h  gripper_sim_server.h  manipulation_helpers.h  model_library_data.h  simulator_server.h
include/franka_drake/protocol/: error.h  rbk_types.h  service_traits.h  service_types.h
kb/: warehouse_helpers.md
libfranka_examples/: CMakeLists.txt  cartesian_spiral_motion.cpp  cartesian_trajectory_following.cpp  force_control_simple.cpp  generate_elbow_motion_simple.cpp  gravity_compensation_toggle.cpp  move_all_joints.cpp  move_joint7_position.cpp  move_joint7_position_wait.cpp  simple_joint_motion_test.cpp  sine_wave_velocity_control.cpp  spline_trajectory.cpp  trajectory_following.cpp
models/: pick_and_place_scene.sdf  warehouse_scene.sdf
models/meshes/robot_arms/fer/collision/: hand.dae  link0.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  link7.dae
models/urdf/: fer_drake.urdf  fer_drake_fingerless.urdf  fer_drake_gripper_fixed.urdf  fer_drake_gripper_simple_collision.urdf  package.xml
plt/: default  default.10e_4  fixed_default_pos  fixed_pos2  fixed_pos3  gcomp_success_collision_disabled  perfect_gcomp_with_no_joint7  plot.py  torque_pid_gcomp_success
plt/logs/: custom_last_joint_zero
scripts/: performance.json
scripts/collision/: download_official_collision_meshes.py
scripts/perf/: continuous_performance_monitor.py  drake_performance_monitor.html  launch_performance_monitor.sh  performance.json  performance_monitor_server.py  test_performance_monitor.py
src/: CMakeLists.txt  Makefile  cmake_install.cmake  embed_fci_sim.cpp  embed_fci_sim_helpers.cpp  embed_model_library.cpp  fci_sim_server.cpp  franka_drake_module.cpp  franka_model_stub.cpp  gripper_sim_server.cpp  manipulation_helpers.cpp  simulator_server.cpp
test/: CMakeLists.txt  test_pick_and_place_helpers.cpp  test_warehouse_helpers.cpp
