<?xml version="1.0"?>
<package format="2">
  <name>franka_drake</name>
  <version>1.0.0</version>
  <description>Franka robot models for Drake simulation</description>
  <maintainer email="davidkh@u.northwestern.edu">Drake User</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>cmake</buildtool_depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>
</package> 